some cosmetic changes

--- a/ue4.html
+++ b/ue4.html
@@ -369,10 +369,8 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 werden müssen mindestens je Analyseblock (also z.B. je 25ms) die Koeffizienten (Zahl
                 entspricht der Filterordnung) und die Grundfrequenz f0. Setze hier jeweils pro Zahlenwert
                 16bit an. Vergleiche diese Datenrate mit der ursprünglichen PCM-Datenrate der Sprachdatei.</p>
+                <p>Original PCM: 16 * 16000 = 256.000 Bit/s</p>
                 <table>
-                    <tr>
-                        <th>Original PCM: 16 * 16000 = 256.000 Bit/s</th>
-                    </tr>
                     <tr>
                         <th>16/25: 10880 Bit/s</th>
                         <th>16/50: 5440 Bit/s</th>
@@ -424,18 +422,14 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 </tr>
                 <tr>
                     <th><audio controls><source src="./Uebung4/david/4_4/Satz_David_16_25_whitenoise.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung4/marc/4_4/whitenoise_16_25.png" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung4/stefan/4_4/Stefan_Whitenoise.JPG" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung4/marc/4_4/whitenoise_16_25.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung4/stefan/4_4/Satz_Stefan_16_25ms_whitenoise.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
                     <th><img src="./Uebung4/david/4_4/whitenoise.JPG" width="400" height="200"></th>
                     <th><img src="./Uebung4/marc/4_4/whitenoise_16_25.png" width="400" height="200"></th>
                     <th><img src="./Uebung4/stefan/4_4/Stefan_Whitenoise.JPG" width="400" height="200"></th>
                 </tr>
-                <th>
-                    <p>Verwendete Whitenoisedatei</p>
-                </th>
-                <th><audio controls><source src="./Uebung4/whitenoise.wav" type="audio/wav"></audio></th></tr>
                 <tr>
                     <th>David Pulse Train</th>
                     <th>Marc Pulse Train</th>
@@ -444,17 +438,13 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 <tr>
                     <th><audio controls><source src="./Uebung4/david/4_4/Satz_David_16_25_pulsetrain.wav" type="audio/wav"></audio></th>
                     <th><audio controls><source src="./Uebung4/marc/4_4/pulsetrain_16_25.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung4/stefan/4_4/Stefan_Pulsetrain.JPG" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung4/stefan/4_4/Satz_Stefan_16_25ms_pulsetrain.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
                     <th><img src="./Uebung4/david/4_4/pulsetrain.JPG" width="400" height="200"></th>
                     <th><img src="./Uebung4/marc/4_4/pulsetrain_16_25.png" width="400" height="200"></th>
                     <th><img src="./Uebung4/stefan/4_4/Stefan_Pulsetrain.JPG" width="400" height="200"></th>
                 </tr>
-                <th>
-                    <p>Verwendete Pulse Train Datei</p>
-                </th>
-                <th><audio controls><source src="./Uebung4/pulsetrain.wav" type="audio/wav"></audio></th></tr>
                 <tr>
                     <th>David Musikdatei</th>
                     <th>Marc Musikdatei</th>
@@ -471,10 +461,16 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                     <th><img src="./Uebung4/stefan/4_4/Stefan_Music.JPG" width="400" height="200"></th>
                 </tr>
                 <tr>
-                    <th>
-                        <p>Verwendete Musiksatei</p>
-                    </th>
-                    <th><audio controls><source src="./Uebung4/VHS_DREAMS_-_Vice_Point__64_kbps_.wav" type="audio/wav"></audio></th></tr>
+                    <th><p>Verwendete Pulse Train Datei</p></th>
+                    <th><p>Verwendete Whitenoisedatei</p></th>
+                    <th><p>Verwendete Musiksatei</p></th>
+                </tr>
+                <tr>
+                    <th><audio controls><source src="./Uebung4/whitenoise.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung4/pulsetrain.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung4/VHS_DREAMS_-_Vice_Point__64_kbps_.wav" type="audio/wav"></audio></th>
+                </tr>
+                    
             </table>
 
         </section>
