die Analyse etwas verbessert

--- a/ue4.html
+++ b/ue4.html
@@ -359,7 +359,7 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                     <th><img src="./Uebung4/stefan/4_3/Stefan_1_100.JPG" width="400" height="200"></th>
                 </tr>
             </table>
-            <p>Wenn man die Framebreite verlängert, verschwimmt die Sprache ineinander. Es klingt als würde es ein leichtes echo geben. Je mehr man die Filter-Ordnung verschlechtert umso schlechter verständlich wird der Satz.
+            <p>Wenn man die Framebreite verlängert, verschwimmt die Sprache ineinander. Es klingt als würde es ein leichtes echo geben. Desweiteren verringert sich der Pegel. Am besten ist das bei Marc's Aufnahme zu beobachten. Je mehr man die Filter-Ordnung verschlechtert umso schlechter verständlich wird der Satz.
                 Für uns ist die Sprachqualität nach einer Filter-Ordnung von 10 oder einer Framelänge von 25 nicht mehr akzeptabel aber das liegt von den Ansprüchen ab und wofür es verwendet werden soll. Wenn es nur darum geht die Nachricht zu übermitteln wären alle akzeptabel für einen Anruft die eben genannten.
                 Für ein Höhrbuch nichtmal 16/25. 
             </p>
