--- a/ue4.html
+++ b/ue4.html
@@ -160,8 +160,8 @@
                     <th><audio controls><source src="./Uebung4/stefan/4_2/Satz_Stefan_16_25ms_InverseFilter.wav" type="audio/wav"></audio></th>
                 </tr>
             </table>
-            <p>Das Residuum verliert seine Ausprägungen in den Frequenzen. Man kann erahnen, was gesagt wurde aber es wird stark übersteuert. Die Friktiven Laute wie F und S höhrt man hierbei besonders heraus.
-                Desweiteren Klingt das Residuum wesentlich dumpfer und metallischer als das Original.
+            <p>Das Residuum verliert seine Ausprägungen in den Frequenzen. Man kann erahnen, was gesagt wurde aber es wird stark übersteuert. Die Friktiven Laute wie F und S hört man hierbei besonders heraus.
+                Des Weiteren klingt das Residuum wesentlich dumpfer und metallischer als das Original.
             </p>
         </section>
     </article>
@@ -360,7 +360,7 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 </tr>
             </table>
             <p>Wenn man die Framebreite verlängert, verschwimmt die Sprache ineinander. Es klingt als würde es ein leichtes echo geben. Desweiteren verringert sich der Pegel. Am besten ist das bei Marc's Aufnahme zu beobachten. Je mehr man die Filter-Ordnung verschlechtert umso schlechter verständlich wird der Satz.
-                Für uns ist die Sprachqualität nach einer Filter-Ordnung von 10 oder einer Framelänge von 25 nicht mehr akzeptabel aber das liegt von den Ansprüchen ab und wofür es verwendet werden soll. Wenn es nur darum geht die Nachricht zu übermitteln wären alle akzeptabel für einen Anruft die eben genannten.
+                Für uns ist die Sprachqualität nach einer Filter-Ordnung von 10 oder einer Framelänge von 25 nicht mehr akzeptabel, aber dass hängt von den Ansprüchen ab und wofür es verwendet werden soll. Wenn es nur darum geht die Nachricht zu übermitteln wären alle akzeptabel, für einen Anruf die eben genannten.
                 Für ein Höhrbuch nichtmal 16/25. 
             </p>
 
@@ -368,7 +368,7 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                 und 100ms) berechnen wir die Datenraten. Dazu machen wir uns Folgendes klar: Übertragen
                 werden müssen mindestens je Analyseblock (also z.B. je 25ms) die Koeffizienten (Zahl
                 entspricht der Filterordnung) und die Grundfrequenz f0. Setze hier jeweils pro Zahlenwert
-                16bit an. Vergleiche diese Datenrate mit der ursprünglichen PCM-Datenrate der Sprachdatei.</p>
+                16 Bit an. Vergleiche diese Datenrate mit der ursprünglichen PCM-Datenrate der Sprachdatei.</p>
                 <p>Original PCM: 16 * 16000 = 256.000 Bit/s</p>
                 <table>
                     <tr>
@@ -393,7 +393,7 @@ Sprachverständlichkeit nicht mehr akzeptabel?</p>
                     </tr>
                     <th><a style="color:blue;" href="./Uebung4/datenrate4_3.m">Matlab-Skript zur berechnung</a></th>
                 </table>
-                <p>Die ursprüngliche PCM-Datenrate betrug 256.000 Bit/s mit 16/25 unserer höchsten Datenrate haben wir nur 10.880 Bits/s was eine 23,5 fache verringerung ist.</p>
+                <p>Die ursprüngliche PCM-Datenrate betrug 256.000 Bit/s. Mit 16/25 unserer höchsten Datenrate haben wir nur 10.880 Bit/s, was einer 23,5 fache Verringerung entspricht.</p>
         </section>
     </article>
     <article>
