--- a/ue5.html
+++ b/ue5.html
@@ -172,7 +172,6 @@
                 <th style="border: 1px solid black"></th>
                 <th style="border: 1px solid black"></th>
             </tr>
-        </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
             <tr>
                 <th style="border: 1px solid black">Marc Fall 1</th>
@@ -182,39 +181,39 @@
             </tr>
             <tr>
                 <th style="border: 1px solid black">Der</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">229ms</th>
+                <th style="border: 1px solid black">102Hz</th>
+                <th style="border: 1px solid black">70,78dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Mann</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">266ms</th>
+                <th style="border: 1px solid black">112,9Hz</th>
+                <th style="border: 1px solid black">71,88dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">liest</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">325ms</th>
+                <th style="border: 1px solid black">98,84Hz</th>
+                <th style="border: 1px solid black">63,2dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">die</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">143ms</th>
+                <th style="border: 1px solid black">99,78Hz</th>
+                <th style="border: 1px solid black">64,8dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Zei</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">341ms</th>
+                <th style="border: 1px solid black">103,4Hz</th>
+                <th style="border: 1px solid black">66,97dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">tung</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">421ms</th>
+                <th style="border: 1px solid black">106,9Hz</th>
+                <th style="border: 1px solid black">60,05dB</th>
             </tr>
         </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
@@ -316,39 +315,39 @@
             </tr>
             <tr>
                 <th style="border: 1px solid black">Der</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">203ms</th>
+                <th style="border: 1px solid black">105,2Hz</th>
+                <th style="border: 1px solid black">75,16dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Mann</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">218ms</th>
+                <th style="border: 1px solid black">106,1Hz</th>
+                <th style="border: 1px solid black">73,36dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">liest</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">411ms</th>
+                <th style="border: 1px solid black">116,9Hz</th>
+                <th style="border: 1px solid black">68,98dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">die</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">137ms</th>
+                <th style="border: 1px solid black">101,5Hz</th>
+                <th style="border: 1px solid black">63,01dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Zei</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">299ms</th>
+                <th style="border: 1px solid black">100,5Hz</th>
+                <th style="border: 1px solid black">68,7dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">tung</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">345ms</th>
+                <th style="border: 1px solid black">113,1Hz</th>
+                <th style="border: 1px solid black">57dB</th>
             </tr>
         </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
@@ -441,50 +440,51 @@
                 <th style="border: 1px solid black"></th>
             </tr>
         </table>
-        <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
-            <tr>
-                <th style="border: 1px solid black">Marc Fall 3</th>
-                <th style="border: 1px solid black">Silbendauer[ms]</th>
-                <th style="border: 1px solid black">F0[Hz]</th>
-                <th style="border: 1px solid black">Intensität[dB]</th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">Der</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">Mann</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">liest</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">die</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">Zei</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-            <tr>
-                <th style="border: 1px solid black">tung</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-            </tr>
-        </table>
+      </table>
+      <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
+          <tr>
+              <th style="border: 1px solid black">Marc Fall 3</th>
+              <th style="border: 1px solid black">Silbendauer[ms]</th>
+              <th style="border: 1px solid black">F0[Hz]</th>
+              <th style="border: 1px solid black">Intensität[dB]</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">Der</th>
+              <th style="border: 1px solid black">207ms</th>
+              <th style="border: 1px solid black">104,4Hz</th>
+              <th style="border: 1px solid black">75,45dB</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">Mann</th>
+              <th style="border: 1px solid black">199ms</th>
+              <th style="border: 1px solid black">109,6Hz</th>
+              <th style="border: 1px solid black">74,05dB</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">liest</th>
+              <th style="border: 1px solid black">0,314s</th>
+              <th style="border: 1px solid black">109,6Hz</th>
+              <th style="border: 1px solid black">67,92dB</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">die</th>
+              <th style="border: 1px solid black">147ms</th>
+              <th style="border: 1px solid black">106,6Hz</th>
+              <th style="border: 1px solid black">63,68dB</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">Zei</th>
+              <th style="border: 1px solid black">339ms</th>
+              <th style="border: 1px solid black">118,8Hz</th>
+              <th style="border: 1px solid black">74,54dB</th>
+          </tr>
+          <tr>
+              <th style="border: 1px solid black">tung</th>
+              <th style="border: 1px solid black">311ms</th>
+              <th style="border: 1px solid black">101,3Hz</th>
+              <th style="border: 1px solid black">61,22dB</th>
+          </tr>
+      </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
             <tr>
                 <th style="border: 1px solid black">Stefan Fall 3</th>
@@ -576,51 +576,51 @@
         </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
             <tr>
-                <th style="border: 1px solid black">Marc  Fall 4</th>
+                <th style="border: 1px solid black">Marc Fall 4</th>
                 <th style="border: 1px solid black">Silbendauer[ms]</th>
                 <th style="border: 1px solid black">F0[Hz]</th>
                 <th style="border: 1px solid black">Intensität[dB]</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Der</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">183ms</th>
+                <th style="border: 1px solid black">104,5Hz</th>
+                <th style="border: 1px solid black">73,9dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Mann</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">188ms</th>
+                <th style="border: 1px solid black">121,6Hz</th>
+                <th style="border: 1px solid black">74,47dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">liest</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">263ms</th>
+                <th style="border: 1px solid black">120,3Hz</th>
+                <th style="border: 1px solid black">66,22dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">die</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">115ms</th>
+                <th style="border: 1px solid black">117,2Hz</th>
+                <th style="border: 1px solid black">65,7dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">Zei</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">283ms</th>
+                <th style="border: 1px solid black">98,96Hz</th>
+                <th style="border: 1px solid black">70,23dB</th>
             </tr>
             <tr>
                 <th style="border: 1px solid black">tung</th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
-                <th style="border: 1px solid black"></th>
+                <th style="border: 1px solid black">306ms</th>
+                <th style="border: 1px solid black">103,7Hz</th>
+                <th style="border: 1px solid black">60,56dB</th>
             </tr>
         </table>
         <table style="border: 1px solid black; border-collapse: collapse; display: inline-block;">
             <tr>
-                <th style="border: 1px solid black">Stefan  Fall 4</th>
+                <th style="border: 1px solid black">Stefan Fall 4</th>
                 <th style="border: 1px solid black">Silbendauer[ms]</th>
                 <th style="border: 1px solid black">F0[Hz]</th>
                 <th style="border: 1px solid black">Intensität[dB]</th>
@@ -684,7 +684,7 @@
             durch Abhören, ob die ursprünglichen Bedeutungen, d.h. der Fokus, erhalten geblieben sind. Speichere
             die monotonen Versionen als WAV-Dateien ab (File->Publish Resynthesis überträgt das aktuelle Audio
             in das ObjectWindow).</p>
-            
+
             <table>
                 <tr>
                     <th>David Fall 1</th>
@@ -740,7 +740,7 @@
         <section>
             <p>Jetzt nehmen wir Fall 4) und verringern die Geschwindigkeit, indem wir einen DurationPoint mit
                 dem Wert 1,2 einsetzen. Wir erhöhen den Wert in Schritten von 0,2, bis wir bemerken, dass sich die
-                Klangqualität deutlich verschlechtert. Woran liegt das? Speichere diesen Fall als WAV-Datei ab.</p> 
+                Klangqualität deutlich verschlechtert. Woran liegt das? Speichere diesen Fall als WAV-Datei ab.</p>
             <table>
                 <tr>
                     <th>David Fall 4</th>
@@ -757,8 +757,8 @@
                     <th><img src="./Uebung5/marc/5_5/Duration.JPG" width="400" height="200"></th>
                     <th><img src="./Uebung5/stefan/5_5/Duration.JPG" width="400" height="200"></th>
                 </tr>
-            </table>   
-            <p>Durch das einfügen von perioden zur verlangsamung des Signals, entsteht der Phazing-Effekt</p>    
+            </table>
+            <p>Durch das einfügen von perioden zur verlangsamung des Signals, entsteht der Phazing-Effekt</p>
         </section>
 
     </article>
